# Hardware-interface

./: .gitignore  CMakeLists.txt  README.md
code/: CMakeLists.txt  README.md  package.xml
code/include/hardware_interface/DemoApplication/: DemoApplication.hpp
code/include/hardware_interface/Robot_arm_HLD/: RobotArmDriver.hpp
code/include/hardware_interface/Servo_LLD/: SerialServoCommunication.hpp  ServoDriver.hpp
code/msg/: SetServos.msg
code/src/DemoApplication/: DemoApplication.cpp  demo_main.cpp
code/src/Robot_arm_HLD/: RobotArmDriver.cpp  robotarm_main.cpp
code/src/Servo_LLD/: SerialServoCommunication.cpp  ServoDriver.cpp
include/hardware_interface/DemoApplication/: DemoApplication.hpp
include/hardware_interface/Robot_arm_HLD/: RobotArmDriver.hpp
include/hardware_interface/Servo_LLD/: SerialServoCommunication.hpp  ServoDriver.hpp
ontwerpen/: toelichting hardware interface.docx
src/DemoApplication/: DemoApplication.cpp
src/Robot_arm_HLD/: RobotArmDriver.cpp  robotarm_main.cpp
src/Servo_LLD/: SerialServoCommunication.cpp  ServoDriver.cpp
